--- a/server/package.json
+++ b/server/package.json
@@ -14,5 +14,8 @@
     "mongoose": "^6.4.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19"
+  },
+  "scripts": {
+    "start": "nodemon server.js"
   }
 }
