--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "slugify": "^1.6.5"
   },
   "scripts": {
     "start": "nodemon server.js"
