--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-image-file-resizer": "^0.4.8",
     "react-modal-image": "^2.5.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.3.0",
