--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
     "slugify": "^1.6.5",
-    "stripe": "^10.10.0"
+    "stripe": "^10.10.0",
+    "uniqid": "^5.4.0"
   },
   "scripts": {
     "start": "nodemon server.js"
