--- a/Server2/package.json
+++ b/Server2/package.json
@@ -17,7 +17,9 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
-    "nodemon": "^2.0.20"
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.20",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "nodemo": "^1.0.0"
