--- a/Server2/.env
+++ b/Server2/.env
@@ -1,6 +1,7 @@
 CONNECTION_STRING = mongodb+srv://Dtn0801:Thanhdatcute1999@cluster0.j8rd1.mongodb.net/MERNSHOP?retryWrites=true&w=majority
 JWT_SECRET = only_one_love_0801
-
+MAIL_ID=badpoizzz@gmail.com
+MAIL_PASSWORD=jstkcmjquwbfleqw
 
 
 
