--- a/ReactPure/client/package.json
+++ b/ReactPure/client/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
+    "i": "^0.3.7",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
@@ -29,7 +31,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
- 
   "browserslist": {
     "production": [
       ">0.2%",
